A \beginexample ... \endexample changed to \begintt ... \endtt.

--- a/doc/options.tex
+++ b/doc/options.tex
@@ -349,10 +349,10 @@ a Coset Table", one could set the `echo' option to be  true,  use  the
 turn messaging on (but to be fairly infrequent) by setting  `messages'
 to a large positive value as follows:
 
-\beginexample
+\begintt
 gap> ACECosetTable(fgens, rels, [c]
 >                  : echo, hard, Wo := 10^7, mess := 10000);;
-\endexample
+\endtt
 
 As mentioned in the previous section, `echo' may be thought  of  as  a
 boolean option, whereas `hard' is a strategy option (and hence  should
