Added `pkgbanner' option.

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -894,6 +894,10 @@ it was `false').
 the non-interactive `ACEStats' which previously  used  files  all  now
 invoke iostreams .
 
+\item{}
+Option `pkgbanner' used to control  the  printing  of  the  banner  on
+loading (see~"Loading the ACE Package").
+
 \endlist
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
