--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -24,7 +24,7 @@ prompt), you will need to set  the  `InfoACE'  level  to  4.  We  have
 omitted the line
 
 \beginexample
-gap> RequirePackage("ace");
+gap> LoadPackage("ace");
 true
 \endexample
 
@@ -135,8 +135,8 @@ abbreviated. A  slightly  modified  version  of  this  example,  which
 includes  the  `echo'  option  is  available  on-line  via  `table  :=
 ACEExample("perf602p5");'. You may wish to peruse  the  notes  in  the
 `ACEExample' index first, however, by executing `ACEExample();'. (Note
-that the final table output here is `lenlex'  standardised,  since  we
-used {\GAP} 4.3; with {\GAP} 4.2 the final table will be  `semilenlex'
+that the final table output here is `lenlex'  standardised  (the  case
+since {\GAP} 4.3); with {\GAP} 4.2 the final  table  was  `semilenlex'
 standardised.)
 
 \beginexample
