--- a/doc/install.tex
+++ b/doc/install.tex
@@ -22,10 +22,10 @@ To install, unpack the archive file, which should have a name of  form
 sub-directory in the `pkg' hierarchy of your version of {\GAP}~4. This
 might be the `pkg' directory of the {\GAP}~4  home  directory;  it  is
 however also possible to keep an additional `pkg'  directory  in  your
-private directories, see Section~"ref:Installing a GAP Package in your
-home directory". (The only essential difference with installing {\ACE}
-in a `pkg' directory different to the {\GAP}~4 home directory is  that
-one must start {\GAP} with the `-l' switch, e.g.~if your private `pkg'
+private directories. The only  essential  difference  with  installing
+{\ACE} in a `pkg' directory different to the {\GAP}~4  home  directory
+is  that  one  must  start  {\GAP}   with   the   `-l'   switch   (see
+Section~"ref:Command  Line  Options"),  e.g.~if  your  private   `pkg'
 directory is a subdirectory of `mygap'  in  your  home  directory  you
 might type:
 
@@ -33,9 +33,10 @@ might type:
 \){\kernttindent}gap -l ";<myhomedir>/mygap"
 %endtt
 
-where <myhomedir> is the path to your home  directory,  which  may  be
-replaced by a tilde in {\GAP}~4.3. The empty path before the semicolon
-is filled in by the default path of the {\GAP}~4 home directory.)
+where <myhomedir> is the path to your  home  directory,  which  (since
+{\GAP}~4.3) may be replaced by a tilde.  The  empty  path  before  the
+semicolon is filled in by  the  default  path  of  the  {\GAP}~4  home
+directory.
 
 After unpacking the archive, go to the newly created  `ace'  directory
 and call `./configure <path>' where <path> is the path to  the  {\GAP}
@@ -99,57 +100,70 @@ If you encounter problems in installation please read the `README'.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Loading the ACE Package}
 
-To use the {\ACE} Package you have to request it explicitly.  This  is
-done by calling
+To use the {\ACE} Package you have  to  request  it  explicitly.  With
+{\GAP} 4.4, this is done by calling
 
 \beginexample
-gap> RequirePackage( "ace" );
-#I      The ACE (Advanced Coset Enumerator) Package
-#I    C code by George Havas <havas@itee.uq.edu.au> and
-#I              Colin Ramsay <cram@itee.uq.edu.au>
-#I                   ACE binary version: 3.001
-#I    GAP code by Greg Gamble <gregg@itee.uq.edu.au> and
-#I           Alexander Hulpke <hulpke@math.colostate.edu>
-#I                   ACE package version: 3.003
-#I  
-#I                   For help, type: ?ACE
+gap> LoadPackage("ace");
+---------------------------------------------------------------------------
+Loading    ACE (Advanced Coset Enumerator) 4.1
+GAP code by Greg Gamble <gregg@itee.uq.edu.au> (address for correspondence)
+       Alexander Hulpke (http://www.math.colostate.edu/~hulpke)
+           [uses ACE binary (C code program) version: 3.001]
+C code by  George Havas (http://www.itee.uq.edu.au/~havas)
+           Colin Ramsay (http://www.itee.uq.edu.au/~cram)
+
+                 For help, type: ?ACE
+---------------------------------------------------------------------------
 true
 \endexample
 
-The      `RequirePackage'      command      is      described       in
-Section~"ref:RequirePackage" in the {\GAP} Reference Manual.
-
-If {\GAP} cannot find a working binary, the call  to  `RequirePackage'
-will fail.
-
-Since {\ACE}'s banner is `Info'-ed at `InfoWarning' level 1,  it  will
-not be observed if the `InfoLevel' of `InfoWarning' is 0.
-
 \index{banner!suppression}
-The banner is also suppressed if the global {\GAP} variable `QUIET' is
-`true' or `BANNER' is `false' (these conditions  occur  if  {\GAP}  is
-invoked with the `-q' or `-b' command line switches, respectively). If
-you want to load the {\ACE}  package  by  default,  you  can  put  the
-`RequirePackage' command into your `.gaprc' file (see Section~"ref:The
+The banner may be suppressed by providing the version string (`"4.1"')
+as second argument and `false' as third argument to the  `LoadPackage'
+command.    The    `LoadPackage'    command    is     described     in
+Section~"ref:LoadPackage" in the {\GAP} Reference Manual.
+
+If {\GAP} cannot find a working binary, the call to `LoadPackage' will
+fail.
+
+If you want to load the {\ACE} package by default,  you  can  put  the
+`LoadPackage' command into your `.gaprc'  file  (see  Section~"ref:The
 .gaprc file" in the {\GAP} Reference Manual).
 
+*Loading ACE with GAP 4.3*
+
+The remainder of this section is only relevant if you are still  using
+{\GAP} 4.3. 
+
+To load {\ACE} with {\GAP} 4.3 you will need to  use  `RequirePackage'
+rather than `LoadPackage', and in this case the  banner  will  look  a
+little different. In particular, each line starts  with  `\#I',  since
+the banner is `Info'-ed at `InfoWarning' level 1, and so will  not  be
+observed if the `InfoLevel' of `InfoWarning' is 0.
+
+With {\GAP} 4.3, the banner is also suppressed if  the  global  {\GAP}
+variable `QUIET' is `true' or `BANNER' is  `false'  (these  conditions
+occur if {\GAP}  is  invoked  with  the  `-q'  or  `-b'  command  line
+switches, respectively).
+
 \atindex{option pkgbanner}{@option \noexpand`pkgbanner'}
-Yet one more way of suppressing  {\ACE}'s  banner  is  to  supply  the
-option  `pkgbanner'  with  value  `"none"'  to  the   `RequirePackage'
-command:
+With {\GAP} 4.3, there is yet one more  way  of  suppressing  {\ACE}'s
+banner is to supply the option `pkgbanner' (which does  nothing  under
+{\GAP} 4.4) with value `"none"' to the `RequirePackage' command:
 
 \beginexample
 gap> RequirePackage( "ace" : pkgbanner := "none" );
 true
 \endexample
 
-Finally, the full banner is replaced by  a  ``short''  1-line  loading
-message (`Info'-ed at `InfoWarning' level 1) if, instead,  `pkgbanner'
-has the value `"short"':
+Finally (with {\GAP} 4.3), the full banner is replaced by a  ``short''
+1-line loading  message  (`Info'-ed  at  `InfoWarning'  level  1)  if,
+instead, `pkgbanner' has the value `"short"':
 
 \begintt
 gap> RequirePackage( "ace" : pkgbanner := "short" );
-#I  Loading ACE Package Version 3.003
+#I  Loading ACE Package Version 4.1
 true
 \endtt
 
