--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -16,14 +16,14 @@
 
 \index{strategy}\atindex{Felsch strategy}{@Felsch strategy}
 \atindex{HLT strategy}{@HLT strategy}
-Throughout this manual for  the  use  of  {\ACE}  as  a  {\GAP}  share
-package, we shall assume that the reader already knows the basic ideas
-of coset enumeration, as can be  found  for  example  in~\cite{Neu82}.
-There, a simple proof is given for the fact that a  coset  enumeration
-for a subgroup of finite index in  a  finitely  presented  group  must
-eventually terminate with the correct result, provided the enumeration
-process obeys a simple condition (Mendelsohn's  condition)  formulated
-in Lemma~1 and Theorem~2 of~\cite{Neu82}. This basic condition  leaves
+Throughout this manual for the use of {\ACE} as a {\GAP}  package,  we
+shall assume that the reader already knows the basic  ideas  of  coset
+enumeration, as can be found for  example  in~\cite{Neu82}.  There,  a
+simple proof is given for the fact that  a  coset  enumeration  for  a
+subgroup of finite index in a finitely presented group must eventually
+terminate with the correct result, provided  the  enumeration  process
+obeys  a  simple  condition  (Mendelsohn's  condition)  formulated  in
+Lemma~1 and Theorem~2 of~\cite{Neu82}.  This  basic  condition  leaves
 room for a great variety of *strategies* for  coset  enumeration;  two
 ``classical'' ones have been known for a  long  time  as  the  *Felsch
 strategy* and the *HLT strategy* (for Haselgrove, Leech and  Trotter).
@@ -336,17 +336,17 @@ preferred definitions.
 \Section{Finding Subgroups}
 
 \index{coincidence}
-The  {\ACE}  Share  Package,  via  its  interactive  {\ACE}  interface
-functions   (described   in   Chapter~"Functions   for    Using    ACE
-Interactively"), provides the possibility of searching for  subgroups.
-To do this one starts  at  a  known  subgroup  (possibly  the  trivial
-subgroup). Then one may augment it by adding new  subgroup  generators
-either        explicitly        via         `ACEAddSubgroupGenerators'
-(see~"ACEAddSubgroupGenerators")   or   implicitly   by    introducing
-*coincidences* (see `ACECosetCoincidence':  "ACECosetCoincidence",  or
-`ACERandomCoincidences':  "ACERandomCoincidences").  Also,   one   may
-descend to smaller  subgroups  by  deleting  subgroup  generators  via
-`ACEDeleteSubgroupGenerators' (see~"ACEDeleteSubgroupGenerators").
+The {\ACE} package, via its  interactive  {\ACE}  interface  functions
+(described  in  Chapter~"Functions  for  Using  ACE   Interactively"),
+provides the possibility of searching for subgroups. To  do  this  one
+starts at a known subgroup (possibly the trivial subgroup).  Then  one
+may augment it by adding new subgroup generators either explicitly via
+`ACEAddSubgroupGenerators'     (see~"ACEAddSubgroupGenerators")     or
+implicitly by introducing *coincidences*  (see  `ACECosetCoincidence':
+"ACECosetCoincidence",           or           `ACERandomCoincidences':
+"ACERandomCoincidences"). Also, one may descend to  smaller  subgroups
+by  deleting  subgroup  generators  via  `ACEDeleteSubgroupGenerators'
+(see~"ACEDeleteSubgroupGenerators").
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Coset Table Standardisation Schemes}
