Changes resulting from changes to res-examples/pgrelfind.g

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -909,7 +909,7 @@ The package version number now has a single decimal  place,  to  avoid
 being confused with the binary version number.
 
 \item{`4.1'}
-Release version.
+Added $M_{12}$ presentation to `res-examples/pgrelfind.g'.
 
 \endlist
 
