--- a/doc/install.tex
+++ b/doc/install.tex
@@ -7,7 +7,7 @@
 %H  $Id$
 %%
 %Y  Copyright (C) 2000  Centre for Discrete Mathematics and Computing
-%Y                      Department of Computer Science & Electrical Eng.
+%Y                      Department of Information Tech. & Electrical Eng.
 %Y                      University of Queensland, Australia.
 %%
 
@@ -106,7 +106,7 @@ To use the {\ACE} Package you have  to  request  it  explicitly.  With
 \beginexample
 gap> LoadPackage("ace");
 ---------------------------------------------------------------------------
-Loading    ACE (Advanced Coset Enumerator) 4.1
+Loading    ACE (Advanced Coset Enumerator) 5.0
 GAP code by Greg Gamble <gregg@itee.uq.edu.au> (address for correspondence)
        Alexander Hulpke (http://www.math.colostate.edu/~hulpke)
            [uses ACE binary (C code program) version: 3.001]
@@ -118,8 +118,15 @@ C code by  George Havas (http://www.itee.uq.edu.au/~havas)
 true
 \endexample
 
+\atindex{option pkgbanner}{@option \noexpand`pkgbanner'}
+In version 4.1 of the {\ACE} package there was an  option  `pkgbanner'
+that allowed the user  some  control  on  how  the  banner  above  was
+displayed. This only worked with {\GAP}~4.3. Since, the {\ACE} package
+now requires at least {\GAP}~4.4, this option has been removed. If you
+still have {\GAP}~4.3, you will need to use {\ACE}~4.1.
+
 \index{banner!suppression}
-The banner may be suppressed by providing the version string (`"4.1"')
+The banner may be suppressed by providing the version string (`"5.0"')
 as second argument and `false' as third argument to the  `LoadPackage'
 command.    The    `LoadPackage'    command    is     described     in
 Section~"ref:LoadPackage" in the {\GAP} Reference Manual.
@@ -130,42 +137,6 @@ fail.
 If you want to load the {\ACE} package by default,  you  can  put  the
 `LoadPackage' command into your `.gaprc'  file  (see  Section~"ref:The
 .gaprc file" in the {\GAP} Reference Manual).
-
-*Loading ACE with GAP 4.3*
-
-The remainder of this section is only relevant if you are still  using
-{\GAP} 4.3. 
-
-To load {\ACE} with {\GAP} 4.3 you will need to  use  `RequirePackage'
-rather than `LoadPackage', and in this case the  banner  will  look  a
-little different. In particular, each line starts  with  `\#I',  since
-the banner is `Info'-ed at `InfoWarning' level 1, and so will  not  be
-observed if the `InfoLevel' of `InfoWarning' is 0.
-
-With {\GAP} 4.3, the banner is also suppressed if  the  global  {\GAP}
-variable `QUIET' is `true' or `BANNER' is  `false'  (these  conditions
-occur if {\GAP}  is  invoked  with  the  `-q'  or  `-b'  command  line
-switches, respectively).
-
-\atindex{option pkgbanner}{@option \noexpand`pkgbanner'}
-With {\GAP} 4.3, there is yet one more  way  of  suppressing  {\ACE}'s
-banner is to supply the option `pkgbanner' (which does  nothing  under
-{\GAP} 4.4) with value `"none"' to the `RequirePackage' command:
-
-\beginexample
-gap> RequirePackage( "ace" : pkgbanner := "none" );
-true
-\endexample
-
-Finally (with {\GAP} 4.3), the full banner is replaced by a  ``short''
-1-line loading  message  (`Info'-ed  at  `InfoWarning'  level  1)  if,
-instead, `pkgbanner' has the value `"short"':
-
-\begintt
-gap> RequirePackage( "ace" : pkgbanner := "short" );
-#I  Loading ACE Package Version 4.1
-true
-\endtt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
