CHHR01 has appeared now! ... updated.

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -323,9 +323,12 @@
 @ARTICLE{CHHR01,
   AUTHOR        = {Colin M. Campbell and George Havas and Alexander Hulpke
                    and Edmund F. Robertson},
-  TITLE         = {The simple group {$L_3(5)$} is efficient},
+  TITLE         = {Efficient simple groups},
   JOURNAL       = {Communications in Algebra},
-  YEAR          = {to appear c. 2001},
+  VOLUME        = {30},
+  NUMBER        = {9},
+  YEAR          = {2002},
+  PAGES         = {4613--4619},
 }
 
 @ARTICLE{CMY79,
