--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -916,6 +916,10 @@ Added $M_{12}$ presentation to `res-examples/pgrelfind.g'.
 Pre-{\GAP} 4.4 compatibility removed.  Now  at  least  {\GAP}  4.4  is
 required. Option `pkgbanner' has been completely removed.
 
+\item{`5.1'}
+The files `configure' and `Makefile.in' were made more robust to ensure
+they will work well with both {\GAP} 4.4 and {\GAP} 4.
+
 \endlist
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
