--- a/doc/install.tex
+++ b/doc/install.tex
@@ -106,8 +106,8 @@ To use the {\ACE} Package you have  to  request  it  explicitly.  With
 \beginexample
 gap> LoadPackage("ace");
 ---------------------------------------------------------------------------
-Loading    ACE (Advanced Coset Enumerator) 5.0
-GAP code by Greg Gamble <gregg@itee.uq.edu.au> (address for correspondence)
+Loading    ACE (Advanced Coset Enumerator) 5.1
+GAP code by Greg Gamble <Greg.Gamble@uwa.edu.au> (address for correspondence)
        Alexander Hulpke (http://www.math.colostate.edu/~hulpke)
            [uses ACE binary (C code program) version: 3.001]
 C code by  George Havas (http://www.itee.uq.edu.au/~havas)
@@ -126,7 +126,7 @@ now requires at least {\GAP}~4.4, this option has been removed. If you
 still have {\GAP}~4.3, you will need to use {\ACE}~4.1.
 
 \index{banner!suppression}
-The banner may be suppressed by providing the version string (`"5.0"')
+The banner may be suppressed by providing the version string (`"5.1"')
 as second argument and `false' as third argument to the  `LoadPackage'
 command.    The    `LoadPackage'    command    is     described     in
 Section~"ref:LoadPackage" in the {\GAP} Reference Manual.
