--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -27,7 +27,7 @@
   AUTHOR        = {John Leech},
   TITLE         = {Coset enumeration},
   BOOKTITLE     = {Computational Problems in Abstract Algebra},
-  }PUBLISHER     = {Pergamon Press, Oxford},
+  PUBLISHER     = {Pergamon Press, Oxford},
   YEAR          = {1970},
   PAGES         = {21--35},
 }
@@ -379,7 +379,7 @@
   JOURNAL       = {The Mathematical Intelligencer},
   YEAR          = {1979},
   VOLUME        = {2},
-  ISSUE         = {1},
+  NUMBER        = {1},
   PAGES         = {18--19}
 }
 
