--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -43,11 +43,11 @@
   \centerline{Weber Building, Fort Collins, CO 80523, USA}\medskip
   \centerline{and}\medskip
   \centerline{\secfont Greg Gamble}\medskip
-  \centerline{Centre for Discrete Mathematics and Computing} \medskip
-  \centerline{Department of Information Technology and Electrical Engineering}
+  \centerline{Department of Mathematics and Statistics} \medskip
+  \centerline{Curtin University}
   \medskip
-  \centerline{The University of Queensland, St.~Lucia 4072, Australia}\medskip
-  \centerline{\secfont email: gregg@itee.uq.edu.au}
+  \centerline{GPO Box U 1987, Perth WA 6845, Australia}\medskip
+  \centerline{\secfont email: Greg.Gamble@uwa.edu.au}
   \vfill
   \centerline{\secfont{\Month} \Year}
 }
